--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "Nawaf Al-Ageel"
 description: "Software Engineer | Cloud Architect | Cybersecurity Enthusiast"
 author: "Nawaf Al-Ageel"
-theme: jekyll-theme-cayman # You can change to any other theme
+theme: jekyll-theme-minimal # You can change to any other theme
